--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
     <head>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </head>
-    <body>
-            
-            <audio volume id="audioPlayer">
-                <source src="swag.mp3" type="audio/mpeg" id="swag">
-            </audio>
-            <div class="container" id="audioControls">
-                <button id="play-pause" class="btn btn-default glyphicon glyphicon-play"></button>
-            </div>
+    <body>         
+        <audio id="audio-player">
+            <source src="swag.mp3" type="audio/mpeg" id="swag">
+            <source src="unwrap.mp3" type="audio/mpeg" id="unwrap">
+        </audio>
+        <div class="container-fluid" id="audio-controls">
+            <button id="play-pause" class="btn btn-default glyphicon glyphicon-play"></button>
+            <button id="volume-off" class="btn btn-default glyphicon glyphicon-volume-off"></button>
+            <button id="volume-down" class="btn btn-default glyphicon glyphicon-volume-down"></button>
+            <button id="volume-up" class="btn btn-default glyphicon glyphicon-volume-up"></button>
+        </div>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="script.js" type="text/javascript"></script>
     </body>
